<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dinakarmc.cash.Registration"
    android:background="@drawable/and_3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Registration"
            android:id="@+id/Registration"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/linearLayout3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Name"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/Name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/UsernameReg"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/Username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/Email"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/Email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/PasswordReg"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/Password"
            android:password="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ConfPass"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/ConfPass"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/Regbut"
            android:layout_gravity="center_horizontal"
            android:width="120dp"
            android:background="#8d7777"
            android:textSize="17dp" />
    </LinearLayout>

</RelativeLayout>
