<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dinakarmc.cash.Transfer"
    android:background="@drawable/and_12">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Transfer"
            android:id="@+id/TransferPage"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout6">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rusername"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:hint="@string/RecUrname"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/amt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/Amount"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Transferb"
            android:id="@+id/TransferB"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:width="120dp"
            android:background="#f7b5f4"
            android:textSize="17dp" />
    </LinearLayout>
</RelativeLayout>
