<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dinakarmc.cash.Deposit"
    android:background="@drawable/and_32">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/DepositPage"
            android:id="@+id/deposithead"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textStyle="italic" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/depamt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:hint="@string/Amount"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DepositB"
            android:id="@+id/depositb"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:width="120dp"
            android:background="#f99a9a"
            android:textSize="17dp" />


    </LinearLayout>
</RelativeLayout>
