<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dinakarmc.cash.Logged"
    android:background="@drawable/and_1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DepositPage"
        android:id="@+id/Welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Balance"
            android:id="@+id/Balance"
            android:textSize="35dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout4"
        android:layout_toRightOf="@+id/linearLayout4"
        android:layout_toEndOf="@+id/linearLayout4"
        android:id="@+id/linearLayout5">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Amount"
        android:layout_gravity="right"
        android:layout_alignTop="@+id/linearLayout5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="35dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/linearLayout4"
        android:layout_toEndOf="@+id/linearLayout4"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Deposit"
            android:id="@+id/deposit"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="173dp"
            android:width="140dp"
            android:background="#c7f9c9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Transfer"
            android:id="@+id/Tran"
            android:layout_below="@+id/deposit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:width="140dp"
            android:background="#c7f9c9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:id="@+id/Delete"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/Tran"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:width="140dp"
            android:background="#c7f9c9" />
    </RelativeLayout>

</RelativeLayout>
